# GeoFLOW

./: .travis.yml  CMakeLists.txt  README.DISCLAIMER  README.md  input.jsn
src/cdg/: CMakeLists.txt  README.TODO  README.cdg
src/cdg/analysis/matlab/: hgeoflow.m  isoplot3d.m  keplot_geoflow2d.m  mplot_geoflow2d.m  rgeoflow.m  sphere2latlonplot2d.m  sphere2mercplot2d.m  sphereplot2d.m
src/cdg/bdy/: gbdy_factory.hpp  gbdy_factory.ipp
src/cdg/blas/: CMakeLists.txt  gcblas.cpp  gcblas.hpp  gcblas.ipp  gmtk.cpp  gmtk.hpp  gmtk.ipp  gtmatrix.hpp  gtmatrix.ipp  gtvector.hpp  gtvector.ipp
src/cdg/cmake/: gconfig_options.cmake  ginc_common.cmake  glocale.cmake  gsrc_common.cmake  gtests_src.cmake
src/cdg/comm/: gcomm.cpp  gcomm.hpp  ggfx.cpp  ggfx.hpp  ggfx.ipp  ggfx.ipp.orig  ginterp.hpp  mrap.hpp
src/cdg/config/: ginitbdy_factory.ipp  ginitforce_comp.h  ginitforce_factory.hpp  ginitforce_factory.ipp  ginitstate_comp.h  ginitstate_factory.hpp  ginitstate_factory.ipp  gspecbdy_factory.cpp  gspecbdy_factory.hpp  gspecbdy_factory.ipp  gspecterrain_factory.hpp  gspecterrain_factory.ipp  gupdatebdy_factory.hpp  gupdatebdy_factory.ipp
src/cdg/data/: geoflow.jsn
src/cdg/exec/: README.exec  geoflow.cpp  geoflow.h
src/cdg/grid/: gbc.cpp  gbc.hpp  gdd_base.hpp  gdd_base.ipp  ggrid.cpp  ggrid.hpp  ggrid.ipp  ggrid_box.cpp  ggrid_box.hpp  ggrid_box.ipp  ggrid_factory.cpp  ggrid_factory.hpp  ggrid_factory.ipp  ggrid_icos.cpp  ggrid_icos.hpp  ggrid_icos.ipp  gkeygen.hpp  gmorton_keygen.hpp  gmorton_keygen.ipp  gtpoint.hpp  gtpoint.ipp  polygon.h
src/cdg/include/: gphysics.h  gtypes.h
src/cdg/init/: ginitb.hpp  ginitb.ipp  ginitb_factory.hpp  ginitb_factory.ipp  ginitbdy.hpp  ginitbdy.ipp  ginitbdy_factory.hpp  ginitbdy_factory.ipp  ginitf_factory.hpp  ginitf_factory.ipp  ginitfb.hpp  ginitforce.hpp  ginitforce.ipp  ginitforce_factory.hpp  ginitforce_factory.ipp  ginitfps.hpp  ginitfs.hpp  ginitfv.ipp  ginitps.ipp  ginits.ipp  ginits_factory.hpp  ginits_factory.ipp  ginitstate.hpp  ginitstate.ipp  ginitstate_factory.hpp  ginitstate_factory.ipp  ginitv.hpp  ginitv.ipp  ginitv_factory.hpp  ginitv_factory.ipp  gspecb.hpp  gspecb.ipp  gspecb_factory.hpp  gspecb_factory.ipp  gspecbdy.hpp  gspecbdy_factory.hpp  gspecbdy_factory.ipp  gupdateb.hpp  gupdateb.ipp  gupdateb_factory.hpp  (+5 more)
src/cdg/io/: gio.c  gio.cpp  gio.h  gio.hpp  gio.ipp  gio_observer.hpp  gio_observer.ipp  gout_simple_observer.hpp  gout_simple_observer.ipp  gposixio_observer.hpp  gposixio_observer.ipp  grestart.cpp
src/cdg/pdes/: gab.cpp  gab.hpp  gab.ipp  gbdf.cpp  gbdf.hpp  gbdf.ipp  gburgers.cpp  gburgers.hpp  gburgers.ipp  gburgers_equation.hpp  gburgers_equation.ipp  gburgersdiag.hpp  gburgersdiag.ipp  gbutcherrk.cpp  gbutcherrk.hpp  gbutcherrk.ipp  gexrk_stepper.cpp  gexrk_stepper.hpp  gexrk_stepper.ipp  gext.cpp  gext.hpp  gext.ipp  gglobaldiag_basic.hpp  gglobaldiag_basic.ipp  gmconv.hpp  gmconv.ipp  gmconvdiag.hpp  gmconvdiag.ipp  gmultilev_coeffs_base.hpp  gpoisson.hpp  gpoisson.ipp  gstateinfo.hpp
src/cdg/sem/: gadvect.cpp  gadvect.hpp  gadvect.ipp  gboyd_filter.hpp  gboyd_filter.ipp  gdiv.hpp  gdiv.ipp  gelem_base.cpp  gelem_base.hpp  ghelmholtz.cpp  ghelmholtz.hpp  ghelmholtz.ipp  glinop.hpp  glinop_base.hpp  gllbasis.hpp  gllbasis.ipp  gmass.cpp  gmass.hpp  gmass.ipp  gnbasis.hpp  gpdv.cpp  gpdv.hpp  gpdv.ipp  gprojection_filter.hpp  gprojection_filter.ipp  gshapefcn_embed.cpp  gshapefcn_embed.ipp  gshapefcn_hostd.ipp  gshapefcn_linear.ipp  gstressen.hpp  gstressen.ipp
src/cdg/solvers/: gcg.hpp  gcg.ipp
src/cdg/user/: finit.cpp_null  ginitf.hpp  ginitf_null.ipp  uinit.cpp_pureadv_gauss
src/cdg/user/bdy/: g0flux_bdy.hpp  g0flux_bdy.ipp  gdirichlet_bdy.hpp  gdirichlet_bdy.ipp  gfrominit_bdy.hpp  gfrominit_bdy.ipp  ginflow_bdy.hpp  ginflow_bdy.ipp  ginflow_frominit_bdy.hpp  ginflow_frominit_bdy.ipp  ginflow_user.hpp  ginflow_user.ipp  ginitb.hpp  ginitb.ipp  ginitb_user.hpp  ginitb_user.ipp  ginitbdy_user.cpp  ginitbdy_user.hpp  ginitbdy_user.ipp  gnoslip_bdy.hpp  gnoslip_bdy.ipp  gns_inflow_user.cpp  gns_inflow_user.hpp  goutflow_bdy.hpp  goutflow_bdy.ipp  gsimple_outflow_bdy.hpp  gsimple_outflow_bdy.ipp  gspecb_user.hpp  gspecb_user.ipp  gspecbdy_user.cpp  gspecbdy_user.hpp  gspecbdy_user.ipp  gsponge_bdy.hpp  gsponge_bdy.ipp  gupdateb.hpp  gupdateb.ipp  gupdateb_user.hpp  gupdateb_user.ipp  gupdatebdy_user.cpp  gupdatebdy_user.hpp  (+1 more)
src/cdg/user/force/: ginitf.hpp  ginitf_null.ipp  ginitf_rand.ipp  ginitf_user.hpp  ginitfb.cpp  ginitfb.hpp  ginitfb.ipp  ginitforce_direct_user.cpp  ginitforce_direct_user.hpp  ginitforce_direct_user.ipp  ginitforce_null.ipp  ginitforce_rand.ipp  ginitforce_user.hpp  ginitfps.cpp  ginitfps.hpp  ginitfps.ipp  ginitfs.cpp  ginitfs.hpp  ginitfs.ipp  ginitfv.cpp  ginitfv.hpp  ginitfv.ipp
src/cdg/user/state/: ginitb.cpp  ginitb.hpp  ginitb.ipp  ginitc.cpp  ginitc.hpp  ginitc.ipp  ginitps.cpp  ginitps.hpp  ginitps.ipp  ginits.cpp  ginits.hpp  ginits.ipp  ginits_burgers.ipp  ginits_user.hpp  ginitstate_burgers.ipp  ginitstate_direct_user.cpp  ginitv.cpp  (+5 more)
src/cdg/utils/: geoflow.hpp  gtstat.hpp  gtstat.ipp  gutils.cpp  gutils.hpp  gutils.ipp
src/tbox/: CMakeLists.txt  assert.hpp  command_line.cpp  global_manager.cpp  input_manager.cpp  input_manager.hpp  math.hpp  property_tree.cpp  spatial.hpp  timer.hpp  tracer.cpp  tracer.hpp
src/tbox/interpolation/: rbf.hpp
test/cdg/: CMakeLists.txt  cold_bubble.jsn  deriv_test.jsn  gtest_advect.cpp  gtest_blas.cpp  gtest_burgers.cpp  gtest_contig.cpp  gtest_gmtk.cpp  gtest_gtmatrix.cpp  gtest_gtvector.cpp  gtest_rk.cpp  gtools.h  hot_bubble.jsn  input.jsn  makefile  mtnwave_input.jsn  scaling.jsn  scharadv_input.jsn  vapor_sphere.jsn  warm_bubble_giraldo.jsn
test/cdg/cmake/: ginc_common.cmake  gsrc_common.cmake  gsrc_tests.cmake
test/cdg/data/: gburgers.jsn
test/cdg/src/: %i  CMakeLists.txt  gio.cpp  gio.h  gtest_advect.cpp  gtest_burgers.cpp  gtest_derivs.cpp  gtest_ggfx.cpp  gtest_ggrid.cpp  gtest_gmtk.cpp  gtest_helm.cpp  gtest_mass.cpp  gtest_rk.cpp  gtools.cpp  gtools.h
test/sandbox/tbox/: CMakeLists.txt  assert.cpp
(+158 files in other folders)
